[package]
name = "runecast-state"
version = "0.1.0"
edition = "2021"
description = "State management for RuneCast game logic"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
